--- a/src/kaizen/DailyLearnings.fxml
+++ b/src/kaizen/DailyLearnings.fxml
@@ -131,9 +131,9 @@
                   </Button>
                </children>
             </GridPane>
-         </bottom></BorderPane>
-   </center>
-   <right>
+         </left>
+      </BorderPane>
+   </right>
       <GridPane prefHeight="720.0" prefWidth="511.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -171,5 +171,4 @@
             </TableView>
          </children>
       </GridPane>
-   </right>
 </BorderPane>
