--- a/src/kaizen/LoginScreen.fxml
+++ b/src/kaizen/LoginScreen.fxml
@@ -36,12 +36,12 @@
             <Font name="Calibri" size="30.0" />
          </font>
       </PasswordField>
-      <Button fx:id="signInButton" layoutX="86.0" layoutY="485.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="550.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Sign in" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="450.0">
+      <Button fx:id="signInButton" layoutX="86.0" layoutY="485.0" mnemonicParsing="false" onAction="#handleLoginButtonAction" prefHeight="50.0" prefWidth="550.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Sign in" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="450.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </Button>
-      <Button fx:id="registerButton" layoutX="100.0" layoutY="557.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="550.0" styleClass="buttons" stylesheets="@stylesheet.css" text="New to Kaizen? Sign up here!" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="525.0">
+      <Button fx:id="registerButton" layoutX="100.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleRegisterButtonAction" prefHeight="50.0" prefWidth="550.0" styleClass="buttons" stylesheets="@stylesheet.css" text="New to Kaizen? Sign up here!" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="525.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
