--- a/src/kaizen/RegisterScreen.fxml
+++ b/src/kaizen/RegisterScreen.fxml
@@ -40,12 +40,12 @@
             <Font name="Calibri Light" size="30.0" />
          </font>
       </PasswordField>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="250.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Cancel" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="600.0">
+      <Button fx:id="cancelRegistration" alignment="CENTER" mnemonicParsing="false" onAction="#handleCancel" prefHeight="30.0" prefWidth="250.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Cancel" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="600.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </Button>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="250.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Sign up" AnchorPane.leftAnchor="400.0" AnchorPane.topAnchor="600.0">
+      <Button fx:id="signUp" alignment="CENTER" layoutX="400.0" layoutY="600.0" mnemonicParsing="false" onAction="#handleSignUp" prefHeight="30.0" prefWidth="250.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Sign up" AnchorPane.leftAnchor="400.0" AnchorPane.topAnchor="600.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
