--- a/src/kaizen/PieChart.fxml
+++ b/src/kaizen/PieChart.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -48,6 +49,13 @@
       </BorderPane>
    </left>
    <right>
-      <BorderPane prefHeight="720.0" prefWidth="1080.0" BorderPane.alignment="CENTER" />
+      <BorderPane prefHeight="720.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
+         <left>
+            <PieChart title="Pie Chart Of My Life" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets top="30.0" />
+               </BorderPane.margin>
+            </PieChart>
+         </left></BorderPane>
    </right>
 </BorderPane>
