--- a/src/kaizen/PieChart.fxml
+++ b/src/kaizen/PieChart.fxml
@@ -50,12 +50,19 @@
    </left>
    <right>
       <BorderPane prefHeight="720.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
-         <left>
-            <PieChart fx:id="lifePieChart" title="Pie Chart Of My Life" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets top="30.0" />
-               </BorderPane.margin>
-            </PieChart>
-         </left></BorderPane>
+         <center>
+            <GridPane BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <PieChart fx:id="lifePieChart" title="Pie Chart Of My Life" />
+               </children>
+            </GridPane>
+         </center></BorderPane>
    </right>
 </BorderPane>
